# jomiel-kore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  README.md  app.py  error.py  package.json  pyproject.toml  setup.cfg  version.py
setup/: __init__.py  cmd.py  proto.py
src/jomiel_kore/: app.py  input.py
