[build-system]
requires = [
    "setuptools >= 51",
    "setuptools_scm[toml] >= 5",
    "wheel >= 0.36",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']
line-length = 72
exclude = '''   # exclude common dirs
(
    /(
        examples
        \.git
        \.tox
    )/
)
'''
