[metadata]
name = jomiel_kore
url = https://github.com/guendto/jomiel-kore

author = Toni Gündoğdu
author_email = 47444442+guendto@users.noreply.github.com

description = Minimalistic foundation for creating new Python applications
long_description_content_type = text/markdown
long_description = file: README.md

license = Apache2.0
platforms = any

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
